--- a/Datapreprocessing.ipynb
+++ b/Datapreprocessing.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0ffa0684",
+   "metadata": {},
+   "source": [
+    "## Importing data and imputing missing values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "a87474f1-1e44-4ba9-992e-bc5c12a26e5b",
    "metadata": {
     "scrolled": true
@@ -25,7 +33,7 @@
        "Length: 82, dtype: int64"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +42,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\Hima Bindu N\\Downloads\\archive\\AmesHousing.csv\")\n",
+    "df = pd.read_csv(r\"AmesHousing.csv\")\n",
     "\n",
     "df.columns = df.columns.str.replace(\" \", \"\")\n",
     "\n",
@@ -47,6 +55,100 @@
     "df[cat_cols] = df[cat_cols].fillna(df[cat_cols].mode().iloc[0])\n",
     "\n",
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0539cbf7",
+   "metadata": {},
+   "source": [
+    "## Scaling Numerical Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a318de5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(      Order       PID  MSSubClass  LotFrontage   LotArea  OverallQual  \\\n",
+       " 0 -1.731460 -0.997164   -0.877005     3.375742  2.744381    -0.067254   \n",
+       " 1 -1.730277 -0.996904   -0.877005     0.514952  0.187097    -0.776079   \n",
+       " 2 -1.729095 -0.996899   -0.877005     0.561850  0.522814    -0.067254   \n",
+       " 3 -1.727913 -0.996888   -0.877005     1.124628  0.128458     0.641571   \n",
+       " 4 -1.726731 -0.992903    0.061285     0.233563  0.467348    -0.776079   \n",
+       " \n",
+       "    OverallCond  YearBuilt  YearRemod/Add  MasVnrArea  ...  WoodDeckSF  \\\n",
+       " 0    -0.506718  -0.375537      -1.163488    0.061046  ...    0.920121   \n",
+       " 1     0.393091  -0.342468      -1.115542   -0.566039  ...    0.366061   \n",
+       " 2     0.393091  -0.441674      -1.259380    0.038650  ...    2.368594   \n",
+       " 3    -0.506718  -0.110988      -0.779919   -0.566039  ...   -0.742060   \n",
+       " 4    -0.506718   0.848000       0.658466   -0.566039  ...    0.935952   \n",
+       " \n",
+       "    OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  PoolArea    MiscVal  \\\n",
+       " 0     0.214409      -0.358838  -0.103134    -0.285354 -0.063031  -0.089422   \n",
+       " 1    -0.704493      -0.358838  -0.103134     1.854530 -0.063031  -0.089422   \n",
+       " 2    -0.170937      -0.358838  -0.103134    -0.285354 -0.063031  21.985725   \n",
+       " 3    -0.704493      -0.358838  -0.103134    -0.285354 -0.063031  -0.089422   \n",
+       " 4    -0.200579      -0.358838  -0.103134    -0.285354 -0.063031  -0.089422   \n",
+       " \n",
+       "      MoSold    YrSold  SalePrice  \n",
+       " 0 -0.448057  1.678499   0.428229  \n",
+       " 1 -0.079602  1.678499  -0.948957  \n",
+       " 2 -0.079602  1.678499  -0.110125  \n",
+       " 3 -0.816513  1.678499   0.791305  \n",
+       " 4 -1.184969  1.678499   0.113980  \n",
+       " \n",
+       " [5 rows x 39 columns],\n",
+       "       Order       PID  MSSubClass  LotFrontage   LotArea  OverallQual  \\\n",
+       " 0  0.000000  0.000000    0.000000     0.410959  0.142420     0.555556   \n",
+       " 1  0.000341  0.000102    0.000000     0.202055  0.048246     0.444444   \n",
+       " 2  0.000683  0.000104    0.000000     0.205479  0.060609     0.555556   \n",
+       " 3  0.001024  0.000108    0.000000     0.246575  0.046087     0.666667   \n",
+       " 4  0.001366  0.001672    0.235294     0.181507  0.058566     0.444444   \n",
+       " \n",
+       "    OverallCond  YearBuilt  YearRemod/Add  MasVnrArea  ...  WoodDeckSF  \\\n",
+       " 0        0.500   0.637681       0.166667      0.0700  ...    0.147472   \n",
+       " 1        0.625   0.644928       0.183333      0.0000  ...    0.098315   \n",
+       " 2        0.625   0.623188       0.133333      0.0675  ...    0.275983   \n",
+       " 3        0.500   0.695652       0.300000      0.0000  ...    0.000000   \n",
+       " 4        0.500   0.905797       0.800000      0.0000  ...    0.148876   \n",
+       " \n",
+       "    OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  PoolArea   MiscVal  \\\n",
+       " 0     0.083558            0.0        0.0     0.000000       0.0  0.000000   \n",
+       " 1     0.000000            0.0        0.0     0.208333       0.0  0.000000   \n",
+       " 2     0.048518            0.0        0.0     0.000000       0.0  0.735294   \n",
+       " 3     0.000000            0.0        0.0     0.000000       0.0  0.000000   \n",
+       " 4     0.045822            0.0        0.0     0.000000       0.0  0.000000   \n",
+       " \n",
+       "      MoSold  YrSold  SalePrice  \n",
+       " 0  0.363636     1.0   0.272444  \n",
+       " 1  0.454545     1.0   0.124238  \n",
+       " 2  0.454545     1.0   0.214509  \n",
+       " 3  0.272727     1.0   0.311517  \n",
+       " 4  0.181818     1.0   0.238626  \n",
+       " \n",
+       " [5 rows x 39 columns])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "num_cols = df.select_dtypes(include=np.number).columns\n",
+    "scaler = StandardScaler()\n",
+    "minmax = MinMaxScaler()\n",
+    "df_zscore = df.copy()\n",
+    "df_minmax = df.copy()\n",
+    "df_zscore[num_cols] = scaler.fit_transform(df[num_cols])\n",
+    "df_minmax[num_cols] = minmax.fit_transform(df[num_cols])\n",
+    "df_zscore[num_cols].head(), df_minmax[num_cols].head()"
    ]
   }
  ],
