--- a/Datapreprocessing.ipynb
+++ b/Datapreprocessing.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a318de5c",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        " [5 rows x 39 columns])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,8 +152,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77712d42",
+   "metadata": {},
+   "source": [
+    "## Handling Noise"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "de58f468",
    "metadata": {},
    "outputs": [
@@ -182,13 +190,50 @@
     "plt.title(\"Noise Handling using Rolling Mean\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ad3b9b9",
+   "metadata": {},
+   "source": [
+    "## Handling Outliers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "928716c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outliers detected: 25\n",
+      "Remaining records: 2905\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import zscore\n",
+    "\n",
+    "area_col = [c for c in df.columns if \"Liv\" in c and \"Area\" in c][0]\n",
+    "\n",
+    "df[area_col + \"_Z\"] = zscore(df[area_col])\n",
+    "\n",
+    "outliers = df[abs(df[area_col + \"_Z\"]) > 3]\n",
+    "df_clean = df[abs(df[area_col + \"_Z\"]) <= 3]\n",
+    "\n",
+    "print(\"Outliers detected:\", len(outliers))\n",
+    "print(\"Remaining records:\", len(df_clean))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.13",
+   "display_name": "Python (tf310)",
    "language": "python",
-   "name": "py13"
+   "name": "tf310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -200,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
